# allye_data_connector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: allye_widgets_requirements.md
src/allye_data_connector/: connector.py
src/allye_data_connector.egg-info/: PKG-INFO  SOURCES.txt
