[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allye_data_connector"
version = "0.1.0"
description = "Local DataFrame connector between Python and Allye widgets via manifest.jsonl + shared storage."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Allye" }]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=12.0",
]

[project.urls]
Repository = "https://example.invalid/allye_data_connector"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
